After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650979 - cogl-pipeline-fragend-fixed: Fix enabling texture targets
cogl-pipeline-fragend-fixed: Fix enabling texture targets
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-05-24 15:36 UTC by Neil Roberts
Modified: 2011-06-15 23:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cogl-pipeline-fragend-fixed: Fix enabling texture targets (1.44 KB, patch)
2011-05-24 15:36 UTC, Neil Roberts
none Details | Review

Description Neil Roberts 2011-05-24 15:36:15 UTC
The fixed function fragend gets confused about enabling texture
targets so some of the conformance tests are broken.
Comment 1 Neil Roberts 2011-05-24 15:36:18 UTC
Created attachment 188477 [details] [review]
cogl-pipeline-fragend-fixed: Fix enabling texture targets

When flushing a pipeline that has more layers than the previous
pipeline, the fixed function fragend is supposed to detect that the
texture unit previously had no texture target enabled and then enable
it. However the logic for checking whether the unit was enabled was
broken due to a typing failure when unit->enabled and
unit->current_gl_target were combined into one value in commit
6b7139b0. This was breaking some of the conformance tests when the
fixed function fragend is used.
Comment 2 Neil Roberts 2011-05-27 11:34:02 UTC
Pushed to the Cogl master branch as 54f94a0e and backported to the Clutter 1.6 branch as 0c323266
Comment 3 Robert Bragg 2011-06-15 23:22:54 UTC
Moving Clutter bugs under the CoglPipeline component to be under the Cogl product and CoglPipeline component.